--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "swiper": "^11.2.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/tsconfig": "^0.7.0",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.7",
-    "vue-tsc": "^2.2.0"
+    "vite": "^3.0.0",  
+    "vue-tsc": "^2.2.0",
+    "typescript": "~5.6.2"
   }
 }
