--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.13",
     "nuxt": "^3.15.4",
     "swiper": "^11.2.2",
     "vue": "latest",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.83.4"
   }
 }
