--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dayjs": "^1.11.13",
+    "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
     "swiper": "^11.2.2",
     "vue": "latest",
